# kanban-backend

./: .gitignore  docker-compose.yml  pyproject.toml
myapp.egg-info/: PKG-INFO  SOURCES.txt
src/myapp/: app.py  main.py
src/myapp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/myapp/db/: core.py  models.py
src/myapp/domains/boards/: repositories.py  router.py  schemas.py  service.py
src/myapp/domains/columns/: repositories.py  router.py  schemas.py  service.py
src/myapp/domains/tasks/: repositories.py  router.py  schemas.py  service.py
